--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
         }
 
         .history-menu {
-            position: absolute;
+            position: fixed;
+            /* Chuyển từ absolute sang fixed để đảm bảo luôn hiển thị trên cùng */
             top: 50px;
-            /* Hiển thị ngay dưới nút ☰ */
             right: 10px;
             background: white;
             border: 1px solid #ccc;
@@ -138,9 +138,15 @@
             width: 200px;
             overflow-y: auto;
             box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
-            z-index: 1000;
-            /* Đảm bảo hiển thị trên các phần khác */
+            z-index: 9999;
+            /* Tăng z-index cao hơn bảng điểm */
         }
+
+        #scoreDisplay {
+            z-index: 1000;
+            /* Đảm bảo nhỏ hơn history-menu */
+        }
+
 
         .history-item {
             padding: 8px;
@@ -275,6 +281,7 @@
                 scoreElement.style.padding = "10px";
                 scoreElement.style.border = "1px solid #000";
                 scoreElement.style.fontSize = "20px";
+                scoreElement.style.zIndex = "1000";
                 document.body.appendChild(scoreElement);
             }
 
