--- a/index.html
+++ b/index.html
@@ -239,20 +239,18 @@
             position: fixed;
             bottom: 0;
             left: 50%;
-            /* Đẩy phần tử về giữa */
             transform: translateX(-50%);
-            /* Căn giữa chính xác */
             width: auto;
-            /* Không chiếm toàn bộ màn hình */
             background: white;
-            padding: 10px 20px;
+            padding: 5px 20px;
+            /* Giảm padding để giảm chiều cao */
             text-align: center;
             box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
             display: flex;
             flex-direction: column;
-            /* Căn các phần tử theo chiều dọc */
             align-items: center;
-            /* Căn giữa nội dung */
+            height: auto;
+            /* Tự động điều chỉnh chiều cao */
         }
     </style>
 </head>
